--- a/Recommendations_with_IBM.ipynb
+++ b/Recommendations_with_IBM.ipynb
@@ -2427,7 +2427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Provide your response here.**"
+    "**We can use SVD here because item matrix is consisting of ones and zeros without NaN values. If the item matrix has NaN values, we cannot use SVD, therefore we had to use FunkSVD in the lesson to solve this problem.**"
    ]
   },
   {
